Updates to Form css and navbar link styling

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -32,6 +32,8 @@ $alabaster:#fafafa;
 $fontsize-24: 24;
 $font-size-36: 36;
 
+$error-color: #D22D2D;
+
 @mixin flexBox-row {
     display: flex;
     flex-direction: row;
