Updates to image overlay for Biography and Shows

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -21,6 +21,7 @@
 
 $bandsite-black:#323232;
 $bandsitedark-black:#000000;
+$bandsite-black-rgba:rgba(50, 50, 50, 0.5);
 $avenirnext-regular: 'avenirnext-regular';
 $avenirnext-demi:'avenirnext-demi';
 $avenirnext-bold:'avenirnext-bold';
