--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,4 +1,5 @@
 
+
 @font-face {
     font-family: avenirnext-bold ;
     src: url(/assets/fonts/AvenirNextLTPro-Bold.otf);
@@ -19,7 +20,21 @@
     font-weight: 600;
 }
 
+@mixin tablet {
+    @media (min-width: 768px) {
+      @content;
+    }
+  }
+  
+  @mixin desktop {
+    @media (min-width: 1280px) {
+      @content;
+    }
+  }
+
 $bandsite-black:#323232;
+$bandsitedark-black:#000000;
+$bandsite-black-rgba:rgba(50, 50, 50, 0.5);
 $avenirnext-regular: 'avenirnext-regular';
 $avenirnext-demi:'avenirnext-demi';
 $avenirnext-bold:'avenirnext-bold';
@@ -27,8 +42,11 @@ $silver:#afafaf;
 $mercury:#e1e1e1;
 $alabaster:#fafafa;
 
+
 $fontsize-24: 24;
 $font-size-36: 36;
+
+$error-color: #D22D2D;
 
 @mixin flexBox-row {
     display: flex;
@@ -49,3 +67,436 @@ $font-size-36: 36;
 @mixin uppercase {
     text-transform: uppercase !important;
 }
+
+// Nav bar css
+.nav-bar {
+    background-color: $bandsite-black;
+    @include flexBox-column;
+    padding: 1rem 0;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  
+    &__list-item{
+      font-family: $avenirnext-bold;
+      // background-color: yellow;
+      &:hover{
+        // background-color: blue;
+        color: white;
+        font-family: $avenirnext-bold;
+      }
+      &:not(:active){
+        color: $mercury;
+      }
+    }
+  
+    &__top {
+      padding-top: 1rem;
+    }
+  
+    @include desktop{
+      padding-left: 4rem;
+      &__list-item{
+        font-family: $avenirnext-bold;
+        // background-color: yellow;
+        &:hover{
+          // background-color: blue;
+          color: white;
+          font-family: $avenirnext-bold;
+        }
+        &:not(:active){
+          color: $mercury;
+        }
+      }
+    }
+  
+    @include tablet {
+      justify-content: flex-start;
+      align-items: baseline;
+      flex-direction: row;
+  
+      // padding-left: 1rem;
+      &__top {
+        align-items: baseline;
+        align-content: center;
+        justify-content: center;
+        vertical-align: middle;
+        padding-left: 1rem;
+      }
+  
+      &__heading {
+        font-family: $avenirnext-regular;
+        // margin: 0.5rem 0 0 0;
+        padding: 1rem;
+        // text-transform: uppercase;
+        @include uppercase;
+        // justify-content: center;
+        align-content: center;
+        align-items: baseline;
+      }
+  
+      &__menu-tablet {
+        // background-color: grey;
+        @include flexBox-row;
+        justify-content: space-evenly;
+        align-items: baseline;
+        width: 25% !important;
+        padding-left: 1rem;
+      }
+  
+      &__list {
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-bottom: 0;
+  
+        &-container-selected {
+          // width: 25%;
+          // background-color: red;
+          @include flexBox-column;
+          flex-wrap: nowrap;
+          justify-content: space-between;
+          text-align: center;
+          border-bottom: 0.25rem white solid;
+        }
+  
+        &-item {
+          // width: 25%;
+          width: 100%;
+          padding-right: 2rem;
+          border: none;
+          &:hover{
+            // background-color: blue;
+            color: white;
+            // background: blue;
+            font-family: $avenirnext-bold;
+          }
+          &:not(:active){
+            color: $mercury;
+          }
+  
+          @include tablet{
+            &:hover{
+              // background-color: blue;
+              color: white;
+              // background: blue;
+              font-family: $avenirnext-bold;
+            }
+            &:not(:active){
+              color: $mercury;
+            }
+          }
+  
+          @include desktop{
+            &:hover{
+              // background-color: blue;
+              color: white;
+              // background: blue;
+              font-family: $avenirnext-bold;
+            }
+            &:not(:active){
+              color: $mercury;
+            }
+          }
+        }
+      }
+    }
+  
+    @include desktop {
+      align-items: center;
+    }
+  
+    &-top {
+      margin: 0;
+    }
+  
+    &__heading {
+      font-family: $avenirnext-regular;
+      margin: 0.5rem 0 0 0;
+      // text-transform: uppercase;
+      @include uppercase;
+  
+      @include desktop {
+        padding-left: 10rem;
+        font-size: 36px;
+      }
+    }
+  
+    &__menu {
+      @include flexBox-row;
+      width: 100%;
+      justify-content: space-between;
+  
+      @include desktop {
+        font-size: 1rem;
+      }
+    }
+  
+    &__list {
+      @include flexBox-row;
+      width: 100%;
+      justify-content: space-evenly;
+      text-decoration: none;
+      list-style: none;
+      padding: 0;
+      // Margin bottom to remove the white space bellow so white line is level with div
+      margin-bottom: 0;
+  
+      &-container {
+        // display: flex;
+        // flex-direction: column;
+        @include flexBox-column;
+        color: $alabaster;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        width: 50%;
+        // background: blue;
+        text-align: center;
+  
+        &:hover{
+          // background-color: blue;
+          color: white;
+          font-family: $avenirnext-regular;
+        }
+  
+        
+        // border-bottom: 0.25rem white solid;
+      }
+  
+      &-container-selected {
+        border-bottom: 0.25rem white solid;
+      }
+  
+      &-item {
+        text-decoration: none;
+        list-style: none;
+        color: white;
+        font-family: $avenirnext-demi;
+        padding-bottom: 0.5rem;
+      }
+  
+      @include desktop {
+        &-container-selected {
+          // padding-bottom: 1vh;
+        }
+      }
+    }
+  }
+  
+
+  .footer {
+    background-color: $bandsite-black;
+    @include flexBox-column;
+  
+    &-testing {
+      justify-content: flex-end;
+    }
+  
+    &__header {
+      color: white;
+      font-family: $avenirnext-bold;
+      text-size-adjust: 36px;
+      line-height: 44px;
+      margin: 1rem 0 1rem 1rem;
+  
+      @include tablet {
+        display: none;
+      }
+    }
+  
+    &__social-media {
+      display: flex;
+      justify-content: flex-start;
+      padding: 0;
+      margin-left: 1rem;
+  
+      @include tablet {
+        display: none;
+      }
+  
+      &__icon {
+        padding-right: 1rem;
+        padding-bottom: 1rem;
+      }
+    }
+  
+    &-header__small {
+      color: white;
+      font-family: $avenirnext-demi;
+      font-size: 14px;
+      line-height: 20px;
+      text-transform: capitalize;
+      margin-left: 1rem;
+      margin: 0.25rem 0 0.25rem 1rem;
+    }
+  
+    &-address {
+      color: white;
+      margin: 1rem 0 0.25rem 1rem;
+  
+      &__header {
+        text-transform: capitalize;
+        margin: 0;
+        font-family: $avenirnext-regular;
+        font-size: 14px;
+        line-height: 20px;
+        text-transform: capitalize;
+  
+        &-uppercase {
+          @include uppercase;
+        }
+  
+        &-extra {
+          padding-top: 1rem;
+          text-transform: none;
+        }
+      }
+    }
+  
+    &-two {
+      @include tablet {
+        // display: none;
+        @include display-none;
+      }
+    }
+  
+    &-three {
+      padding-top: 1rem;
+  
+      @include tablet {
+        @include display-none;
+      }
+    }
+  
+    &-four {
+      padding-top: 1rem;
+  
+      @include tablet {
+        @include display-none;
+      }
+    }
+  
+    &-lower {
+      padding-left: 1rem;
+      padding-top: 1rem;
+  
+      &__header {
+        font-size: 24px;
+        line-height: 32px;
+        font-family: $avenirnext-regular;
+        color: white;
+      }
+  
+      &__copyright {
+        font-size: 14px;
+        line-height: 22px;
+        font-family: $avenirnext-regular;
+        color: white;
+      }
+  
+      @include tablet {
+        @include display-none;
+      }
+  
+      @include desktop {
+        &__header {
+          padding-right: 1vw;
+        }
+  
+        &__copyright {
+          padding-left: 12vh;
+        }
+      }
+    }
+  }
+  
+  .footer-mobile {
+    @include display-none;
+  
+    @include tablet {
+      @include flexBox-row;
+      align-items: baseline;
+      justify-content: space-between;
+  
+      padding: 0.5rem 1rem;
+  
+      &__row {
+        // display: flex;
+        // flex-direction: row;
+        @include flexBox-row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+      }
+  
+      &__header {
+        @include flexBox-row;
+        color: white;
+        font-family: $avenirnext-bold;
+        font-size: 36px;
+        line-height: 44px;
+      }
+  
+      &__social {
+        @include flexBox-row;
+      }
+  
+      &__icon {
+        padding-left: 1rem;
+      }
+  
+      &-left {
+        @include flexBox-row;
+        justify-content: space-between;
+      }
+  
+      &-right {
+        @include flexBox-row;
+        align-items: baseline;
+        padding-right: 1rem;
+      }
+    }
+  
+    @include desktop {
+      padding: 1rem 7vw;
+  
+      &__header {
+        color: white;
+      }
+    }
+  }
+  
+  .footer-tablet__team {
+    @include display-none;
+  
+    @include tablet {
+      @include flexBox-row;
+      justify-content: space-between;
+      padding: 0 1rem;
+  
+      &__left {
+        @include flexBox-column;
+      }
+  
+      &__center {
+        @include flexBox-column;
+      }
+  
+      &__right {
+        @include flexBox-column;
+      }
+    }
+  
+    @include desktop {
+      padding: 0 12vh;
+    }
+  }
+  
+  .footer-tablet__lower {
+    @include display-none;
+  
+    @include tablet {
+      display: flex;
+      padding: 1rem 0 0 1rem;
+    }
+  }
+  
