--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -166,17 +166,28 @@
     margin: 0;
     border-bottom: 1.5px global.$silver solid;
 
-    &:hover {
-      background: global.$alabaster;
+    &--active{
+      // color: blue ;
+      @include global.flexBox-row;
+      padding: 1rem;
+      align-items: baseline;
+      justify-content: space-between;
+      align-content: center;
+      border-bottom: 1.5px global.$silver solid;
+      background-color: global.$mercury;
     }
 
-    &:active {
-      background: global.$mercury;
-    }
+    // &:hover {
+    //   background: global.$alabaster;
+    // }
 
-    &::selection {
-      background: blue;
-    }
+    // &:active {
+    //   background: global.$mercury;
+    // }
+
+    // &::selection {
+    //   background: blue;
+    // }
 
     &--tablet{
       // background-color: green;
@@ -197,7 +208,7 @@
       padding: 1rem;
       align-items: baseline;
       justify-content: space-between;
-      align-content: center;
+      align-content: center;;
     }
 
     &--header {
@@ -268,6 +279,11 @@
         font-family: global.$avenirnext-regular;
         color: global.$silver;
         text-transform: uppercase;
+        @include global.flexBox-row;
+        padding: 1rem;
+        align-items: baseline;
+        justify-content: space-between;
+        align-content: center;
       }
     }
   }
